--- a/pruebas/prueba.css
+++ b/pruebas/prueba.css
@@ -2,8 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box; 
-   
-    
 }
 body {
     background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
@@ -46,11 +44,6 @@ main {
     grid-template-columns: 25% auto 25%;
     position:relative;
 }
-
-
-/* .right-container { border: 2px solid red;} */
-
-
 .game-container {
     /* border: 2px solid red; */
     display: flex;
@@ -121,7 +114,7 @@ main {
     width: 100%;
     height: 100%;
     transform-style: preserve-3d;
-    transition: all 0.8s ease;
+    transition: all 0.6s ease;
     /* border: 2px solid chartreuse; */
 }
 .front {
@@ -152,12 +145,12 @@ main {
     margin: 7%;
 }
 /* <!-- ========== PLAYER CONTAINER ========== --> */
-
 .active-img { 
-    border: 2px solid lime;
+    border: 2px solid #ff0846b2;
     border-radius: 10px;
     height:15vh;
     width: 15vh;
+    padding: 3px;
     margin: 10px auto;
     visibility: hidden;
     /* transition: all ease; */
@@ -187,7 +180,6 @@ main {
     font-size: 1.8rem;
 }
 /* <!-- ========== BUTTON CONTAINER ========== --> */
-
 .btn-container {
     background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
     border-radius: 5px;
@@ -203,8 +195,6 @@ main {
     padding: 10px;   
     box-shadow: 0px 5px 5px 0px rgb(0, 0, 0, 0.5); 
 }
-
-
 .btn {  
     transform: translateX(-0%);
     color: rgb(24, 23, 23);
@@ -250,7 +240,6 @@ main {
 }
 /* <!-- ========== Modal Container ========== --> */
 .modal-container {
-    
     opacity: 0;
     visibility: hidden;
     position: fixed;
@@ -259,19 +248,16 @@ main {
     height: 100vh;
     top:0;
     left: 0;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.8);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .modal {
     background-image: linear-gradient(to top left, #f1eff1 0%, #dddada 100%);
-    width: 40%;
+    width: 35%;
     height: 60%;
     text-align: center;
-    /* display: flex;
-    flex-direction: column; */
-    /* justify-content:space-evenly; */
     position: relative;
     transition: transform 1s;
     transform: translateY(0%);
@@ -282,7 +268,6 @@ main {
     transform: translateY(-200%);
     /* border: 2px solid blue;  */
 }
-
 .modal-title {
     font-family: 'Kanit', sans-serif;
     font-size: 25px;
@@ -305,16 +290,10 @@ main {
 }
 .first-player {
     font-family: 'Kanit', sans-serif;
-    /* font-size: 20px; */
+    /* font-size: 25px; */
     margin: 0px auto;
     /* border: 2px solid blue;  */
 }
-/* .modal-msg :nth-child(2) {
-    font-family: 'Kanit', sans-serif;
-    font-size: 30px;
-    /* margin: 0px auto; */
-    /* border: 2px solid blue;  
-} */
 .modal-img {
     /* border: 2px solid rgb(223, 19, 206);  */
     height: 55%;
@@ -328,14 +307,16 @@ main {
     text-align: center;
     
 }
-.modal-img :nth-child(3) { grid-column: 1 / spam 2;
-    /* border: 2px solid lime; */
-}
+.modal-img :nth-child(3) { 
+    grid-column: 1 / spam 2; }
+
 .modal-img :nth-child(1),
 .modal-img :nth-child(2) {
     height: 70%;
     width: 70%;
+    padding: 3px;
     margin: 15px;
+    border-radius: 10px;
     /* border: 2px solid lime; */
     
 }
@@ -345,28 +326,12 @@ main {
     height: 90%;
     width: 90%;
     padding: 3px;
-    /* background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%); */
     border: 2px solid #ff0846b2;
     border-radius: 10px;
     cursor: pointer; 
 }
 
-
-.btn-close-modal {
-    position: absolute;
-    display: inline-block;
-    top: 5px;
-    right: 5px;
-    width: 25px;
-    height: 25px;
-    background: #c44a4c;
-    color: white;
-    line-height: 25px;
-    cursor: pointer;
-    border-radius: 50%;
-    /* border: 2px solid blue;  */
-}
-.btn-modal-container {
+.modal-btn {
     /* border: 2px solid orangered; */
     height: 25%;
     display: flex;
@@ -374,10 +339,100 @@ main {
     justify-content:center;
     align-items: center;
 }
-.btn-modal-container :nth-child(1) {
+.modal-btn :nth-child(1) {
     height: 70%;
     margin: 5px auto;    
     padding: 0px 10px;
     justify-content:center;
     align-items: center;
+}
+.btn-close-modal {
+    background: #c44a4c;
+    font-family: Open Sans;
+    color: white;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+    /* border: 2px solid blue;  */
+}
+/* <!-- ========== END MESSAGE MODAL ========== --> */
+
+#end-msg {
+    /* border: 2px solid red; */
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px; 
+    padding: 10px;
+}
+.end-title {
+    /* border: 2px solid green;  */
+    font-size: 30px;  
+    height: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+.end-img {
+    /* border: 2px solid #ff0846b2; */
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40%;
+    margin: 0px auto;
+}
+
+.win-img {
+    border: 2px solid #ff0846b2;
+    border-radius: 10px;
+    height: 100%;
+}
+
+.draw-img {
+    /* border: 2px solid rgb(223, 19, 206);  */
+    height: 40%;
+    width: 80%;
+    margin: 0px auto;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    align-items: center;
+    justify-items:center;
+
+    
+}
+.draw-img.draw-img :nth-child(1),
+.draw-img :nth-child(2) {
+    border: 2px solid #ff0846b2;
+    border-radius: 10px;
+    height: 80%;
+    width: 80%;
+    padding: 3px;
+
+}
+
+.end-msg {
+    /* border: 2px solid red;  */
+    height: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px; 
+}
+.end-btn  {
+    /* border: 2px solid black; */
+    height: 20%; 
+    
 }
