--- a/pruebas/prueba.css
+++ b/pruebas/prueba.css
@@ -44,36 +44,20 @@ main {
     grid-template-columns: 25% auto 25%;
     position:relative;
 }
-.game-container {
-    /* border: 2px solid red; */
-    display: flex;
-    align-content: center;
-    justify-content: center;
-}
+
+/* <!-- ========== GAME CONTAINER ========== --> */
 .center-container {
     /* border: 2px solid blue;  */
     display: flex; 
     flex-direction: column;
     justify-content:flex-start; 
 }
-.player-container { 
-    font-family: 'Kanit', sans-serif;
+.game-container {
+    /* border: 2px solid red; */
     display: flex;
-    flex-direction: column;
-    align-items:center;
-    justify-content:flex-end;
-    /* transform-style: preserve-3d;
-    transition: all 0.9s ease; */
-    
+    align-content: center;
+    justify-content: center;
 }
-.input-container {
-    /* border: 2px solid limegreen;  */
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content:flex-end;
-}
-/* <!-- ========== GAME CONTAINER ========== --> */
 .boxes-container {
     height: 55vh;
     width: 55vh;
@@ -145,6 +129,16 @@ main {
     margin: 7%;
 }
 /* <!-- ========== PLAYER CONTAINER ========== --> */
+.player-container { 
+    font-family: 'Kanit', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content:flex-end;
+    /* transform-style: preserve-3d;
+    transition: all 0.9s ease; */
+    
+}
 .active-img { 
     border: 2px solid #ff0846b2;
     border-radius: 10px;
@@ -180,20 +174,31 @@ main {
     font-size: 1.8rem;
 }
 /* <!-- ========== BUTTON CONTAINER ========== --> */
+.input-container {
+    /* border: 2px solid limegreen;   */
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content:flex-end;
+}
 .btn-container {
     background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
     border-radius: 5px;
     color: black;
     text-align: center;
-    width: auto;  
+    width: 40%;  
     padding: 3px;
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    align-self:center;
+    align-self:center; */
     margin-bottom: 10%;
+    /* margin: 10px auto;*/
     border-radius: 50px;
     padding: 10px;   
     box-shadow: 0px 5px 5px 0px rgb(0, 0, 0, 0.5); 
+    display:grid;    
+    grid-template-rows: auto;
+    align-self:center;
 }
 .btn {  
     transform: translateX(-0%);
@@ -201,24 +206,19 @@ main {
     background: none;
     border: none;
     font-family: 'Kanit', sans-serif;
-
     font-size: 1.2rem;
-    text-transform: uppercase;
-    
+    text-transform: uppercase;    
     cursor: pointer; 
     font-weight: 400;
     transition: all 0.2s;
-  
-    background-color: white;
     background-color: rgba(255, 255, 255, 0.6);
     backdrop-filter: blur(10px);
-  
-    padding: 8px;
-    width: 100%;
-    /* margin: 5px auto; */
     border-radius: 50px;
     box-shadow: 0 1.75rem 3.5rem rgba(0, 0, 0, 0.1); 
-    align-self: center;
+    /* align-self: center; */
+    /* padding: 8px; */
+    /* width: 100%; */
+    /* margin: 5px auto; */
 }
 .btn:active {
     transform: translate(-0%, 3px);
@@ -228,15 +228,30 @@ main {
     outline: none;
 } 
 .btn-new-game {
-    /* align-self:center; */
-    /* top: 5%; */
     visibility: visible;
-    /* visibility: hidden; */
+    grid-area: 1/1;
 }
 .btn-reset {   
+    grid-area: 1/1;
+    visibility:hidden;
+}
+
+.btn-close-modal {
+    background: #c44a4c;
+    font-family: Open Sans;
+    color: white;
     position: absolute;
-    visibility: hidden;
-    /* visibility: visible;    */
+    top: 5px;
+    right: 5px;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+    /* border: 2px solid blue;  */
 }
 /* <!-- ========== Modal Container ========== --> */
 .modal-container {
@@ -273,10 +288,10 @@ main {
     font-size: 25px;
     text-align: center;
     height: 20%;
-    /* border: 2px solid blue;  */
+    border: 2px solid blue; 
 }
 .modal-text {
-    /* border: 2px solid red; */
+    border: 2px solid red;
     font-family: Open Sans;
     font-weight: 600;
     height: 80%;
@@ -286,7 +301,7 @@ main {
 }
 .modal-msg{
     height: 20%;
-    /* border: 2px solid blue;  */
+    border: 2px solid blue; 
 }
 .first-player {
     font-family: 'Kanit', sans-serif;
@@ -295,7 +310,7 @@ main {
     /* border: 2px solid blue;  */
 }
 .modal-img {
-    /* border: 2px solid rgb(223, 19, 206);  */
+    border: 2px solid rgb(223, 19, 206); 
     height: 55%;
     width: 60%;
     margin: 0px auto;
@@ -308,7 +323,8 @@ main {
     
 }
 .modal-img :nth-child(3) { 
-    grid-column: 1 / spam 2; }
+    grid-column: 1 / spam 2; 
+    border: 2px solid green;}
 
 .modal-img :nth-child(1),
 .modal-img :nth-child(2) {
@@ -332,39 +348,25 @@ main {
 }
 
 .modal-btn {
-    /* border: 2px solid orangered; */
-    height: 25%;
+    border: 2px solid green;
+    height: 20%;
+    width: 40%;
+    margin: 10px auto;     
     display: flex;
-    flex-direction: column;
-    justify-content:center;
-    align-items: center;
+    align-items: center; 
+    justify-content: center;  
 }
 .modal-btn :nth-child(1) {
-    height: 70%;
-    margin: 5px auto;    
-    padding: 0px 10px;
-    justify-content:center;
-    align-items: center;
-}
-.btn-close-modal {
-    background: #c44a4c;
-    font-family: Open Sans;
-    color: white;
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
-    border-radius: 50%;
+    height: 80%; 
+    width: 90%;
+    margin-bottom: 0%; 
+    padding: 3px; 
     display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0px;
-    /* border: 2px solid blue;  */
-}
-/* <!-- ========== END MESSAGE MODAL ========== --> */
+    align-self: center; 
+    justify-content: center; 
+}  
 
+/* <!-- ========== END MESSAGE MODAL ========== --> */
 #end-msg {
     /* border: 2px solid red; */
     height: 100%;
@@ -394,13 +396,11 @@ main {
     height: 40%;
     margin: 0px auto;
 }
-
 .win-img {
     border: 2px solid #ff0846b2;
     border-radius: 10px;
     height: 100%;
 }
-
 .draw-img {
     /* border: 2px solid rgb(223, 19, 206);  */
     height: 40%;
@@ -410,8 +410,6 @@ main {
     grid-template-columns: 50% 50%;
     align-items: center;
     justify-items:center;
-
-    
 }
 .draw-img.draw-img :nth-child(1),
 .draw-img :nth-child(2) {
@@ -420,9 +418,7 @@ main {
     height: 80%;
     width: 80%;
     padding: 3px;
-
 }
-
 .end-msg {
     /* border: 2px solid red;  */
     height: 20%;
@@ -431,8 +427,22 @@ main {
     justify-content: center;
     font-size: 20px; 
 }
-.end-btn  {
-    /* border: 2px solid black; */
-    height: 20%; 
+.end-btn {
+    height: 20%;
+    width: 40%;
+    margin: 10px auto;     
+    display: flex;
+    align-items: center; 
+    justify-content: center;
+   
     
 }
+.end-btn :nth-child(1) {
+    height: 80%; 
+    width: 90%;
+    margin-bottom: 0%; 
+    padding: 3px; 
+    display: flex;
+    align-self: center; 
+    justify-content: center; 
+} 
