--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 body {
     background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
-    overflow: hidden;
+    /* overflow: hidden; */
     position: relative;
     font-family: 'Kanit', sans-serif;
     color: black;    
@@ -13,13 +13,12 @@ body {
     height: 100vh;
     width: 60%;
     margin: 0 auto;
+    cursor:context-menu;
     
 }
-header {   
-    /*border: 2px solid blue; */
+header { 
     background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
     font-size: 30px;
-    /* height: 20%;    */
     width: 60%;
     margin: 20px auto;  
     border-radius: 70px;
@@ -37,25 +36,21 @@ header {
     margin: 0px auto;
 }
 main {
-    /* border: 2px solid blue; */
     height: 80%;
     display: grid;
     grid-template-columns: 25% auto 25%;
     position:relative;
 }
-
 /* <!-- ========== GAME CONTAINER ========== --> */
 .center-container {
-    /* border: 2px solid blue;  */
     display: flex; 
     flex-direction: column;
     justify-content:flex-start; 
 }
 .game-container {
-    /* border: 2px solid red; */
     display: flex;
     align-content: center;
-    justify-content: center;
+    justify-content: center
 }
 .boxes-container {
     height: 55vh;
@@ -64,11 +59,11 @@ main {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     margin: 20px;
-    /* border: 3px solid green; */
 }
 .box {
     border: 3px solid black;
     position: relative;
+    cursor: pointer; 
 }
 .box:nth-child(1),
 .box:nth-child(2),
@@ -92,13 +87,11 @@ main {
 }
 /* <!-- ========== CARD FLIP ========== --> */
 .card{
-    /* background-image: linear-gradient(to top left, #f1eff1 0%, #dddada 100%); */
     position: absolute;
     width: 100%;
     height: 100%;
     transform-style: preserve-3d;
     transition: all 0.6s ease;
-    /* border: 2px solid chartreuse; */
 }
 .front {
     position: absolute;
@@ -107,17 +100,14 @@ main {
     backface-visibility: hidden;
     color:#333;
     transform: rotateY(180deg);
-    /* background-color: red; */
 }
 .back {
-    /* background-image: linear-gradient(to top left, #f1eff1 0%, #dddada 100%); */
     position: absolute;
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
     color:#333;
     transform: rotateY(180deg);
-    /* background-color: rgb(47, 0, 255); */
 }
 .animal-img {
     position: absolute;
@@ -134,9 +124,6 @@ main {
     flex-direction: column;
     align-items:center;
     justify-content:flex-end;
-    /* transform-style: preserve-3d;
-    transition: all 0.9s ease; */
-    
 }
 .active-img { 
     border: 2px solid #ff0846b2;
@@ -146,8 +133,6 @@ main {
     padding: 3px;
     margin: 10px auto;
     visibility: hidden;
-    /* transition: all ease; */
-    /* transform: rotateY(180deg); */
 }
 .player {
     background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
@@ -158,7 +143,6 @@ main {
     padding: 3px;
     margin-bottom: 20%;
     box-shadow: 0px 5px 5px 0px rgb(0, 0, 0, 0.5);
-    
 }
 .player-label {
     font-family: 'Kanit', sans-serif;
@@ -174,7 +158,6 @@ main {
 }
 /* <!-- ========== BUTTON CONTAINER ========== --> */
 .input-container {
-    /* border: 2px solid limegreen;   */
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -187,11 +170,7 @@ main {
     text-align: center;
     width: 40%;  
     padding: 3px;
-    /* display: flex;
-    flex-direction: column;
-    align-self:center; */
     margin-bottom: 10%;
-    /* margin: 10px auto;*/
     border-radius: 50px;
     padding: 10px;   
     box-shadow: 0px 5px 5px 0px rgb(0, 0, 0, 0.5); 
@@ -214,10 +193,6 @@ main {
     backdrop-filter: blur(10px);
     border-radius: 50px;
     box-shadow: 0 1.75rem 3.5rem rgba(0, 0, 0, 0.1); 
-    /* align-self: center; */
-    /* padding: 8px; */
-    /* width: 100%; */
-    /* margin: 5px auto; */
 }
 .btn:active {
     transform: translate(-0%, 3px);
@@ -234,7 +209,6 @@ main {
     grid-area: 1/1;
     visibility:hidden;
 }
-
 .btn-close-modal {
     background: #c44a4c;
     font-family: Open Sans;
@@ -282,29 +256,22 @@ main {
     font-size: 25px;
     text-align: center;
     height: 20%;
-    /* border: 2px solid blue;  */
 }
 .modal-text {
-    /* border: 2px solid red; */
     font-family: Open Sans;
     font-weight: 600;
     height: 80%;
     display: flex;
     flex-direction: column;
-
 }
 .modal-msg{
     height: 20%;
-    /* border: 2px solid blue;  */
 }
 .first-player {
     font-family: 'Kanit', sans-serif;
-    /* font-size: 25px; */
     margin: 0px auto;
-    /* border: 2px solid blue;  */
 }
 .modal-img {
-    /* border: 2px solid rgb(223, 19, 206);  */
     height: 55%;
     width: 60%;
     margin: 0px auto;
@@ -313,12 +280,10 @@ main {
     grid-template-rows: 90% 10%;
     align-items: center;
     justify-items:center;
-    text-align: center;
-    
+    text-align: center;    
 }
 .modal-img :nth-child(3) { 
     grid-column: 1 / spam 2; 
-    /* border: 2px solid green; */
 }
 .modal-img :nth-child(1),
 .modal-img :nth-child(2) {
@@ -326,9 +291,7 @@ main {
     width: 70%;
     padding: 3px;
     margin: 15px;
-    border-radius: 10px;
-    /* border: 2px solid lime; */
-    
+    border-radius: 10px;    
 }
 .modal-img :nth-child(1):hover,
 .modal-img :nth-child(2):hover {
@@ -341,7 +304,6 @@ main {
     cursor: pointer; 
 }
 .modal-btn {
-    /* border: 2px solid green; */
     height: 20%;
     width: 40%;
     margin: 10px auto;     
@@ -382,10 +344,8 @@ main {
     transition: transform 1s;
     transform: translateY(0%);
     border-radius: 10px;
-    /* border: 2px solid black;  */
 }
 #end-msg {
-    /* border: 2px solid red; */
     height: 100%;
     width: 100%;
     display: flex;
@@ -396,16 +356,13 @@ main {
     padding: 10px;
 }
 .end-title {
-    /* border: 2px solid green;  */
     font-size: 30px;  
     height: 20%;
     display: flex;
     align-items: center;
     justify-content: center;
-
 }
 .end-img {
-    /* border: 2px solid #ff0846b2; */
     border-radius: 10px;
     display: flex;
     align-items: center;
@@ -442,10 +399,8 @@ main {
     transition: transform 1s;
     transform: translateY(0%);
     border-radius: 10px;
-    /* border: 2px solid black;  */
 }
 .draw-img {
-    /* border: 2px solid rgb(223, 19, 206);  */
     height: 40%;
     width: 80%;
     margin: 0px auto;
@@ -463,7 +418,6 @@ main {
     padding: 3px;
 }
 .end-msg {
-    /* border: 2px solid red;  */
     height: 20%;
     display: flex;
     align-items: center;
@@ -477,8 +431,6 @@ main {
     display: flex;
     align-items: center; 
     justify-content: center;
-   
-    
 }
 .end-btn :nth-child(1) {
     height: 80%; 
